[gd_scene load_steps=2 format=3 uid="uid://wpsmms6klkt3"]

[ext_resource type="Script" path="res://CharacterSelect.gd" id="1_pkv15"]

[node name="CharacterSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pkv15")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 0
offset_right = 1150.0
offset_bottom = 648.0

[node name="BtnChar1" type="TextureButton" parent="GridContainer"]
layout_mode = 2

[node name="BtnChar2" type="TextureButton" parent="GridContainer"]
layout_mode = 2

[node name="BtnChar3" type="TextureButton" parent="GridContainer"]
layout_mode = 2

[node name="BtnChar4" type="TextureButton" parent="GridContainer"]
layout_mode = 2

[connection signal="pressed" from="GridContainer/BtnChar1" to="." method="_on_btn_char_1_pressed" binds= [0]]
[connection signal="pressed" from="GridContainer/BtnChar2" to="." method="_on_btn_char_2_pressed" binds= [1]]
[connection signal="pressed" from="GridContainer/BtnChar3" to="." method="_on_btn_char_3_pressed" binds= [2]]
[connection signal="pressed" from="GridContainer/BtnChar4" to="." method="_on_btn_char_4_pressed" binds= [3]]
